<resources>
    <string name="app_name">KE.Net ECG</string>
    <string name="settings_name">Settings</string>
    <string name="plot_title">25 mm/s, 10 mm/mV</string>
    <string name="plot_range_title">mV</string>
    <string name="plot_domain_title">mSec</string>
    <string name="note_dialog_title">Enter a Note</string>
    <string name="device_id_dialog_title">Enter your Polar device\'s ID</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="connect">CONNECT ECG</string>
    <string name="connect2">CONNECT HR/RR</string>
    <string name="connecting">Connecting to sensor</string>
    <string name="noDevice">There is no device defined</string>
    <string name="device_id">device_id</string>
    <string name="set_id_button">Change device ID</string>
    <string name="elapsed_time">%1$.1f sec"</string>
    <string name="pause_item">Pause</string>
    <string name="play_item">Play</string>
    <string name="stop_item">Stop</string>
    <string name="save_item">Save</string>
    <string name="save_data_item">Save Data</string>
    <string name="save_plot_item">Save Plot</string>
    <string name="save_both_item">Save Data &amp; Plot</string>
    <string name="save_all_item">Save All</string>
    <string name="save_device_data_item">Save Device HR Data</string>
    <string name="save_qrs_data_item">Save Calculated HR Data</string>
    <string name="choose_data_directory_item">Set Data Directory</string>
    <string name="info_item">Info</string>
    <string name="redo_setup_plots_item">Redo Plot Setup</string>
    <string name="restart_api_item">Restart Polar API</string>
    <string name="device_id_item">Set Device ID</string>
    <string name="settings_item">Settings</string>
    <string name="info_string">%1$s\nBattery level: %2$s\nFirmware: %3$s\nID: %4$s\n%5$s\n</string>
    <string name="connected_string">Connected to %1$s</string>
    <string name="ble_not_supported">Bluetooth LE is not supported.</string>
    <string name="permission_not_granted">All of the necessary permissions for this application to work properly have not been granted. You can change the permissions in Settings | apps.</string>

    <!-- Plots -->
    <string name="label_hr">Heart Rate: </string>
    <string name="label_rr">R-R: </string>
    <string name="hr_title">HR and RR vs. Time</string>
    <string name="qrs_title">ECG vs. Time</string>
    <string name="hr_range_title">HR, bpm RR, ms/10</string>
    <string name="qrs_range_title">QRS Peak Detection</string>
    <string name="hr_domain_title_time">Time</string>
    <string name="hr_domain_title_sample">Sample</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="device_id_title">Device ID</string>
    <string name="device_id_summary">Polar device ID or MAC address</string>
    <string name="patient_name_title">Patient Name</string>
    <string name="patient_name_summary">Patient name for ECG image file</string>
    <string name="qrs_visibility_title">QRS Visibility</string>
    <string name="qrs_visibility_summary_on">QRS detection plot will be shown</string>
    <string name="qrs_visibility_summary_off">QRS detection plot will not be shown</string>

    <!-- Info/Help -->
    <string name="help_url_not_found">Cannot find Help URL</string>
    <string name="help_item">Help</string>
    <string name="help_title">Help</string>
    <string name="help_show_error">Error showing help</string>

    <!-- Utils -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="exception">Exception</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
</resources>
