<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/pause"
        android:icon="@drawable/ic_pause_white_36dp"
        android:title="@string/pause_item"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/save_plot"
        android:title="@string/save_plot_item"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/save_data"
        android:title="@string/save_data_item"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/save_both"
        android:title="@string/save_both_item"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/info"
        android:title="@string/info_item"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/device_id"
        android:title="@string/device_id_item"
        app:showAsAction="never"
        />
</menu>